[gd_scene load_steps=15 format=2]

[ext_resource path="res://GUI/SplitSlider.gd" type="Script" id=1]
[ext_resource path="res://GUI/Optimal size font.tres" type="DynamicFont" id=2]
[ext_resource path="res://GUI/Slider grabber.png" type="Texture" id=3]
[ext_resource path="res://GUI/Slider filler.png" type="Texture" id=4]
[ext_resource path="res://GUI/SplitSliderOKButton.tres" type="StyleBox" id=5]
[ext_resource path="res://Highlight_shader.tres" type="Shader" id=6]
[ext_resource path="res://GUI/Accept icon.png" type="Texture" id=7]
[ext_resource path="res://GUI/tooltip border.png" type="Texture" id=8]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 1, 1, 1, 0.498039, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 32

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 4 )
region_rect = Rect2( 50, 0, 50, 2 )
axis_stretch_horizontal = 1

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 0.0
content_margin_bottom = 0.0
bg_color = Color( 0, 0.607843, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 1, 0.705882, 1 )

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 6 )
shader_param/Brightness = 2.0

[node name="SplitSlider" type="MarginContainer"]
margin_right = 97.0
margin_bottom = 25.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 97.0
margin_bottom = 25.0
mouse_filter = 2
color = Color( 0, 0.0784314, 0.443137, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 97.0
margin_bottom = 25.0
mouse_filter = 2
custom_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_right = 72.0
margin_bottom = 25.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.8

[node name="Gradient" type="TextureRect" parent="HBoxContainer/MarginContainer"]
visible = false
margin_right = 72.0
margin_bottom = 25.0
mouse_filter = 2
texture = SubResource( 2 )
expand = true

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer"]
margin_right = 72.0
margin_bottom = 25.0
mouse_filter = 2

[node name="Dummy" type="Control" parent="HBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 1.0
margin_bottom = 25.0
rect_min_size = Vector2( 1, 0 )
mouse_filter = 2

[node name="Min" type="Label" parent="HBoxContainer/MarginContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0.247059 )
margin_left = 5.0
margin_top = 1.0
margin_right = 11.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 2 )
text = "0"
valign = 1
max_lines_visible = 1

[node name="Current" type="LineEdit" parent="HBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 15.0
margin_right = 39.0
margin_bottom = 25.0
mouse_filter = 1
size_flags_horizontal = 3
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "1"
align = 1
context_menu_enabled = false
caret_blink = true

[node name="Max" type="Label" parent="HBoxContainer/MarginContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0.247059 )
margin_left = 43.0
margin_top = 1.0
margin_right = 67.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 2 )
text = "9999"
align = 2
valign = 1
max_lines_visible = 1

[node name="Dummy2" type="Control" parent="HBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 71.0
margin_right = 72.0
margin_bottom = 25.0
rect_min_size = Vector2( 1, 0 )
mouse_filter = 2

[node name="Slider" type="HSlider" parent="HBoxContainer/MarginContainer"]
margin_top = 17.0
margin_right = 72.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 8 )
mouse_filter = 1
mouse_default_cursor_shape = 2
size_flags_vertical = 10
size_flags_stretch_ratio = 0.5
custom_icons/grabber_highlight = ExtResource( 3 )
custom_icons/grabber = ExtResource( 3 )
custom_styles/slider = SubResource( 4 )
min_value = 1.0
max_value = 9999.0
value = 1.0

[node name="to_delete" type="Button" parent="HBoxContainer"]
visible = false
margin_left = 120.0
margin_right = 140.0
margin_bottom = 30.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 0, 1 )
shortcut_in_tooltip = false
text = "OK"

[node name="Accept" type="TextureButton" parent="HBoxContainer"]
material = SubResource( 6 )
use_parent_material = true
margin_left = 72.0
margin_right = 97.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
shortcut_in_tooltip = false
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="Border" type="NinePatchRect" parent="."]
modulate = Color( 0, 1, 0.705882, 1 )
margin_right = 97.0
margin_bottom = 25.0
texture = ExtResource( 8 )
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1
[connection signal="text_changed" from="HBoxContainer/MarginContainer/HBoxContainer/Current" to="." method="_on_Current_text_changed"]
[connection signal="text_entered" from="HBoxContainer/MarginContainer/HBoxContainer/Current" to="." method="_accepted"]
[connection signal="value_changed" from="HBoxContainer/MarginContainer/Slider" to="." method="_on_Slider_value_changed"]
[connection signal="gui_input" from="HBoxContainer/Accept" to="." method="_on_Accept_gui_input"]
[connection signal="mouse_exited" from="HBoxContainer/Accept" to="." method="_on_Accept_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/Accept" to="." method="_accepted" binds= [ "" ]]
